[package]
name = "mpa-core"
version = "0.1.14"
edition = "2021"

[lib]
name = "mpa_core"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
crossterm = "0.28"
dirs = "5"
once_cell = "1"
pulldown-cmark = "0.10"
ratatui = "0.28"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"

[dev-dependencies]
